--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarProduto.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarProduto.form
@@ -216,6 +216,7 @@
                     <Column editable="false" title="Codbar" type="java.lang.Object"/>
                   </Table>
                 </Property>
+                <Property name="autoResizeMode" type="int" value="4"/>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
