--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/LiberarMedicamento.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/LiberarMedicamento.form
@@ -397,7 +397,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/recursos/basket-go.png"/>
+              <Image iconType="3" name="/com/projetofarmacia/resources/basket-go.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Caixa"/>
           </Properties>
